[package]
edition = "2021"
name = "slack-emoji-bot"
version = "0.2.0"

[dependencies]
reqwest = { version = "0.11.15", features = ["json"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros"] }
vercel_runtime = { version = "0.3.4" }

[[bin]]
name = "hook"
path = "api/hook.rs"
