[package]
edition = "2018"
name = "emojibot"
version = "0.1.0"

[dependencies]
http = "0.1"
serde_json = "1.0"
vercel_lambda = "*"

  [dependencies.reqwest]
  version = "0.11"
  features = [ "blocking", "json" ]

  [dependencies.serde]
  features = [ "derive" ]
  version = "1.0"

[[bin]]
name = "hook"
path = "hook.rs"
